fixed flex wrap issue with user index

--- a/app/assets/stylesheets/api/tabs.scss
+++ b/app/assets/stylesheets/api/tabs.scss
@@ -19,6 +19,7 @@
   min-height:300px;
   padding-left:15px;
   padding-top:4px;
+  padding-bottom: 20px;
 
 }
 .individual-tab:hover {
